[package]
name = "feld"
version = "0.0.1"
edition = "2021"
authors = ["Sam Collins <samc3259@gmail.com>"]
description = "A programming language"
documentation = "https://docs.rs/feld"
readme = "README.md"
repository = "https://github.com/sncxyz/feld"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
